2008-10-02  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-19
	* all changes refer to scripts/initialize
	* remove EP parameter 'collReconnSec'
	* set RB cell sizes to 2/4/1 MB, queue depth to 16
	* set RB monSleepTime to 5 seconds

2008-06-13  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-06-17
	* make BU.cc compile under 64bit (by casting all vector<T>::size()
	values to uint32_t where they are compared to
	xdata::UnsignedInteger32)

2008-05-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-15
	* activate processKiller in initialize script
	* add variable runNumber to initialize script and set it for each
	relevant application

2008-05-23  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-14
	* add StorageManager parameter 'filePath' (/tmp/<user>)
	* repair configuration of PrescaleService according to
	FWCore/PrescaleService V00-04-00 and higher (21X and higher).

2008-05-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-13
	* adjust to StorageManager changes (removed xdaq parameters) in
	EventFilter/StorageManager V03-12-03

2008-04-24  Marco Zanetti  <marco.zanetti@cern.ch>

	* tag V00-06-12
	* log directory added for the SM

2008-04-17  Marco Zanetti  <marco.zanetti@cern.ch>

	* tag V00-06-11
	* DQMStore service added to fu configuration
	* time-out between configuring and enabling for PB
	* RBproperties: processKillerEnabled false
	* PBproperties: hasPrescaleService false
	
2008-03-10  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-10
	* fix to initialize: don't sleep between stop/halt sent to several
	EPs.

2008-01-25  Marco Zanetti  <marco.zanetti@cern.ch>

	* tag V00-06-08
	* adjusted BU/RB properties to run in no-options mode.
	The SM configuration is now such that it accepts events 
	from all paths.


2008-01-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-07